# paper2code

./: .coverage  .mcp.json  AGENTS.md  README.md  coverage.xml  llms.txt  pyproject.toml
app/: __init__.py  main.py  pipeline.py  prompt_manager.py  server.py
app/agents/: __init__.py  architecture.py  code_generation.py  documentation.py  paper_analysis.py  quality_assurance.py  research.py
app/cache/: __init__.py  cache_manager.py
app/integrations/: __init__.py  github.py
app/models/: __init__.py  code.py  paper.py  repository.py
app/tools/: __init__.py  github_tools.py
docs/: DEVELOPMENT.md
examples/: advanced_config.py  basic_usage.py
prompts/: architecture.yaml  code_generation.yaml  documentation.yaml  paper_analysis.yaml  quality_assurance.yaml  research.yaml  sample_prompt.yaml
tests/: test_imports.py
tests/evaluations/: code_quality_evaluation.ipynb
tests/integrations/: test_github_integration.py
tests/scenarios/: paper2code_scenario.test.py  run_scenarios.py
